# html_docx

./: .gitattributes  .gitignore  AGENTS.md  AGENT_GUIDE.md  CLAUDE.md  COMPLETION_PLAN.md  EDGE_CASE_TEST_MATRIX.md  EDITING_EDGE_CASES.md  FUNCTIONAL_SPEC.md  GLOBAL_DELIVERY_PLAN.md  HDOCX_HTML_DESIGN.md  IMPLEMENTATION_STATUS.md  PRESSURE_FIXTURES.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  SELECTOR_AND_REUSE_DESIGN.md  SELECTOR_EDGE_CASES_AND_GUARDS.md  SOFTWARE_ARCHITECTURE.md  USAGE_AND_PRINCIPLES.md  pyproject.toml
.claude/skills/hdocx-agent/references/: hcss.md  workflow.md
scripts/: install-hdocx.ps1
skills/hdocx-agent/: SKILL.md
skills/hdocx-agent/agents/: openai.yaml
skills/hdocx-agent/references/: acceptance.md
src/html_docx/: __init__.py  cli.py  creator.py  errors.py  fixtures.py  hdocx.py  html_scan.py  mcp_server.py  package.py  patcher.py  projector.py  rendering.py  utils.py
tests/: test_cli.py  test_roundtrip.py
