[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "html-docx"
version = "0.1.0"
description = "Agent-friendly reversible DOCX editing through H-DOCX bundles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
html-docx = "html_docx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
